# api-test-scaffold

./: .gitignore  .gitlab-ci.yml  README.md  conftest.py  pyproject.toml  pytest.ini
common/: base_request.py  config.py  db.py  enums.py  expect.py  request.py  tools.py  utils.py
config/: dev.yaml
constants/dev/: project_1.yaml
fixtures/dev/: project_1.yaml
request/: base_request.py
request/project_1/login/: login_request.py
request/project_1/module_1/: classic_scene_request.py  post_method_request.py
scripts/: generate_allure_environment.sh  generate_allure_executor.sh  pretty_allure_report.sh  send_feishu_noty.sh  testcase_changes.sh
testcase/project_1/login/: login_test.py
testcase/project_1/module_1/: classic_scene_test.py  post_method_test.py
tests/project_1/login/: login_test.py
tests/project_1/module_1/: classic_scene_test.py  post_method_test.py
