[tool.poetry]
name = "api-test-scaffold"
version = "0.1.0"
description = ""
authors = ["tomoyachen <tomoya_chen@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
pytest = "^6.2.5"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
